--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Clean Work HTML CSS Template</title>
+        <title> Grace Cleaning service </title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,11 +16,11 @@
         
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap.min.css" rel="stylesheet">
 
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
+        <link href="bootstrap-icons.css" rel="stylesheet">
 
-        <link href="css/tooplate-clean-work.css" rel="stylesheet">
+        <link href="tooplate-clean-work.css" rel="stylesheet">
 
 <!--
 
@@ -42,7 +42,7 @@ Free Bootstrap 5 HTML Template
                     <div class="col-lg-12 col-12 d-flex flex-wrap">
                         <p class="d-flex me-4 mb-0">
                             <i class="bi-house-fill me-2"></i>
-                            One-Stop Cleaning Service
+                            Grace orok Cleaning Service
                         </p>
 
                         <p class="d-flex d-lg-block d-md-block d-none me-4 mb-0">
@@ -66,7 +66,7 @@ Free Bootstrap 5 HTML Template
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/bubbles.png" class="logo img-fluid" alt="">
+                    <img src="bubbles.png" class="logo img-fluid" alt="">
 
                     <span class="ms-2">Clean Work</span>
                 </a>
@@ -164,7 +164,7 @@ Free Bootstrap 5 HTML Template
                         </div>
 
                         <div class="col-lg-6 col-12 custom-block-wrap">
-                            <img src="images/male-wearing-apron-female-white-t-shirt-smiling-broadly-being-glad-clean.png" class="img-fluid">
+                            <img src="male-wearing-apron-female-white-t-shirt-smiling-broadly-being-glad-clean.png" class="img-fluid">
 
                             <div class="custom-block d-flex flex-column">
                                 <h6 class="text-white mb-3">Need Help? <br> Please call us:</h6>
@@ -172,8 +172,8 @@ Free Bootstrap 5 HTML Template
                                 <p class="d-flex mb-0">
                                     <i class="bi-telephone-fill custom-icon me-2"></i>
 
-                                    <a href="tel: 110-220-9800">
-                                        110-220-9800
+                                    <a href="tel:09077228827 ">
+                                        09077228827
                                     </a>
                                 </p>
                             </div>
@@ -198,8 +198,8 @@ Free Bootstrap 5 HTML Template
                                     <div class="col-lg-5 col-md-5 col-12">
                                         <div class="services-image-wrap">
                                             <a href="services-detail.html">
-                                                <img src="images/services/people-taking-care-office-cleaning.jpg" class="services-image img-fluid" alt="">
-                                                <img src="images/services/person-taking-care-office.jpg" class="services-image services-image-hover img-fluid" alt="">
+                                                <img src="people-taking-care-office-cleaning.jpg" class=" img-fluid" alt="">
+                                                <img src="person-taking-care-office.jpg" class="services-image services-image-hover img-fluid" alt="">
 
                                                 <div class="services-icon-wrap">
                                                     <div class="d-flex justify-content-between align-items-center">
@@ -260,8 +260,8 @@ Free Bootstrap 5 HTML Template
                                     <div class="col-lg-5 col-md-5 col-12">
                                         <div class="services-image-wrap">
                                             <a href="services-detail.html">
-                                                <img src="images/services/young-smiling-woman-wearing-rubber-gloves-cleaning-stove.jpg" class="services-image img-fluid" alt="">
-                                                <img src="images/services/woman-holding-rag-detergent-cleaning-cooker.jpg" class="services-image services-image-hover img-fluid" alt="">
+                                                <img src="young-smiling-woman-wearing-rubber-gloves-cleaning-stove.jpg" class="services-image img-fluid" alt="">
+                                                <img src="woman-holding-rag-detergent-cleaning-cooker.jpg" class="services-image services-image-hover img-fluid" alt="">
 
                                                 <div class="services-icon-wrap">
                                                     <div class="d-flex justify-content-between align-items-center">
@@ -322,8 +322,8 @@ Free Bootstrap 5 HTML Template
                                     <div class="col-lg-5 col-md-5 col-12">
                                         <div class="services-image-wrap">
                                             <a href="services-detail.html">
-                                                <img src="images/services/man-polishing-car-inside-car-service.jpg" class="services-image img-fluid" alt="">
-                                                <img src="images/services/man-polishing-car-inside.jpg" class="services-image services-image-hover img-fluid" alt="">
+                                                <img src="man-polishing-car-inside-car-service.jpg" class="services-image img-fluid" alt="">
+                                                <img src="man-polishing-car-inside.jpg" class="services-image services-image-hover img-fluid" alt="">
 
                                                 <div class="services-icon-wrap">
                                                     <div class="d-flex justify-content-between align-items-center">
@@ -384,8 +384,8 @@ Free Bootstrap 5 HTML Template
                                     <div class="col-lg-5 col-md-5 col-12">
                                         <div class="services-image-wrap">
                                             <a href="services-detail.html">
-                                                <img src="images/services/professional-industrial-cleaner-protective-uniform-cleaning-floor-food-processing-plant.jpg" class="services-image img-fluid" alt="">
-                                                <img src="images/services/close-up-mop-cleaning-industrial-plant-floor.jpg" class="services-image services-image-hover img-fluid" alt="">
+                                                <img src="professional-industrial-cleaner-protective-uniform-cleaning-floor-food-processing-plant.jpg" class="services-image img-fluid" alt="">
+                                                <img src="close-up-mop-cleaning-industrial-plant-floor.jpg" class="services-image services-image-hover img-fluid" alt="">
 
                                                 <div class="services-icon-wrap">
                                                     <div class="d-flex justify-content-between align-items-center">
@@ -458,7 +458,7 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-4 col-12">
                             <div class="featured-block">
                                 <div class="d-flex align-items-center mb-3">
-                                    <img src="images/avatar/happy-customer-01.jpg" class="avatar-image img-fluid">
+                                    <img src="happy-customer-01.jpg" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
                                         <h4 class="mb-0">Marie</h4>
@@ -478,7 +478,7 @@ Free Bootstrap 5 HTML Template
 
                             <div class="featured-block mb-lg-0">
                                 <div class="d-flex align-items-center mb-3">
-                                    <img src="images/avatar/happy-customer-02.jpg" class="avatar-image img-fluid">
+                                    <img src="happy-customer-02.jpg" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
                                         <h4 class="mb-0">Nana</h4>
@@ -500,7 +500,7 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-4 col-12">
                             <div class="featured-block">
                                 <div class="d-flex align-items-center mb-3">
-                                    <img src="images/avatar/happy-customer-03.jpg" class="avatar-image img-fluid">
+                                    <img src="happy-customer-03.jpg" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
                                         <h4 class="mb-0">Elon</h4>
@@ -520,7 +520,7 @@ Free Bootstrap 5 HTML Template
 
                             <div class="featured-block mb-lg-0">
                                 <div class="d-flex align-items-center mb-3">
-                                    <img src="images/avatar/happy-customer-04.jpg" class="avatar-image img-fluid">
+                                    <img src="happy-customer-04.jpg" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
                                         <h4 class="mb-0">Josh</h4>
@@ -542,7 +542,7 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-4 col-12">
                             <div class="featured-block">
                                 <div class="d-flex align-items-center mb-3">
-                                    <img src="images/avatar/happy-customer-05.jpg" class="avatar-image img-fluid">
+                                    <img src="happy-customer-05.jpg" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
                                         <h4 class="mb-0">Katie</h4>
@@ -562,7 +562,7 @@ Free Bootstrap 5 HTML Template
 
                             <div class="featured-block mb-lg-0">
                                 <div class="d-flex align-items-center mb-3">
-                                    <img src="images/avatar/happy-customer-06.jpg" class="avatar-image img-fluid">
+                                    <img src="happy-customer-06.jpg" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
                                         <h4 class="mb-0">Shai</h4>
@@ -595,23 +595,23 @@ Free Bootstrap 5 HTML Template
                         </div>
 
                         <div class="col-lg-2 col-md-4 col-6">
-                            <img src="images/partners/toprak-leasing.svg" class="partners-image img-fluid">
+                            <img src="toprak-leasing.svg" class="partners-image img-fluid">
                         </div>
 
                         <div class="col-lg-2 col-md-4 col-6">
-                            <img src="images/partners/glorix.svg" class="partners-image img-fluid">
+                            <img src="glorix.svg" class="partners-image img-fluid">
                         </div>
 
                         <div class="col-lg-2 col-md-4 col-6">
-                            <img src="images/partners/woocommerce.svg" class="partners-image img-fluid">
+                            <img src="woocommerce.svg" class="partners-image img-fluid">
                         </div>
 
                         <div class="col-lg-2 col-md-4 col-6">
-                            <img src="images/partners/rolf-leasing.svg" class="partners-image img-fluid">
+                            <img src="rolf-leasing.svg" class="partners-image img-fluid">
                         </div>
 
                         <div class="col-lg-2 col-md-4 col-6">
-                            <img src="images/partners/unilabs.svg" class="partners-image img-fluid">
+                            <img src="unilabs.svg" class="partners-image img-fluid">
                         </div>
 
                     </div>
@@ -626,7 +626,7 @@ Free Bootstrap 5 HTML Template
 
                     <div class="col-lg-12 col-12 d-flex align-items-center mb-4 pb-2">
                         <div>
-                            <img src="images/bubbles.png" class="logo img-fluid" alt="">
+                            <img src="bubbles.png" class="logo img-fluid" alt="">
                         </div>
 
                         <ul class="footer-menu d-flex flex-wrap ms-5">
@@ -701,7 +701,7 @@ Free Bootstrap 5 HTML Template
                             <i class="bi-envelope-fill me-2"></i>
 
                             <a href="mailto:info@company.com" class="site-footer-link">
-                                info@company.com
+                                gracecleaningservice.com
                             </a>
                         </p>
 
