--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Free Bootstrap 5 HTML Template
                             <i class="site-header-icon bi-whatsapp me-2"></i>
 
                             <a href="tel: 110-220-9800" class="text-white">
-                                110 220 9800
+                                09077228827
                             </a>
                         </p>
                     </div>
@@ -68,7 +68,7 @@ Free Bootstrap 5 HTML Template
                 <a class="navbar-brand" href="index.html">
                     <img src="bubbles.png" class="logo img-fluid" alt="">
 
-                    <span class="ms-2">Clean Work</span>
+                    <span class="ms-2">Grace cleaning services</span>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -391,7 +391,7 @@ Free Bootstrap 5 HTML Template
                                                     <div class="d-flex justify-content-between align-items-center">
                                                         <p class="text-white mb-0">
                                                             <i class="bi-cash me-2"></i>
-                                                            $6,800
+                                                            10,000 Naira
                                                         </p>
 
                                                         <p class="text-white mb-0">
@@ -503,7 +503,7 @@ Free Bootstrap 5 HTML Template
                                     <img src="happy-customer-03.jpg" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
-                                        <h4 class="mb-0">Elon</h4>
+                                        <h4 class="mb-0">Emmanuel anyanime</h4>
 
                                         <div class="reviews-icons mb-1">
                                             <i class="bi-star-fill"></i>
@@ -686,14 +686,14 @@ Free Bootstrap 5 HTML Template
 
                         <p class="text-white d-flex mt-3 mb-2">
                             <i class="bi-geo-alt-fill me-2"></i>
-                            Akershusstranda 20, 0150 Oslo, Norway
+                            No 31 NTA road rivers state port Harcourt 
                         </p>
 
                         <p class="text-white d-flex mb-2">
                             <i class="bi-telephone-fill me-2"></i>
 
-                            <a href="tel: 110-220-9800" class="site-footer-link">
-                                110-220-9800
+                            <a href="tel:09077228827 " class="site-footer-link">
+                                09077228827
                             </a>
                         </p>
 
@@ -750,12 +750,12 @@ Free Bootstrap 5 HTML Template
                     <div class="row">
 
                         <div class="col-lg-6 col-12">
-                            <p class="copyright-text mb-0">Copyright © 2036 Clean Work Co., Ltd.</p>
+                            <p class="copyright-text mb-0">Copyright © 2036 chamberskelvin co., Ltd.</p>
                         </div>
                         
                         <div class="col-lg-6 col-12 text-end">
                             <p class="copyright-text mb-0">
-                            // Designed by <a href="https://www.tooplate.com" target="_parent">Tooplate</a> //</p>
+                            // Designed by Chamberskelvin  //</p>
                         </div>
                         
                     </div>
