--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Free Bootstrap 5 HTML Template
                                                     <div class="d-flex justify-content-between align-items-center">
                                                         <p class="text-white mb-0">
                                                             <i class="bi-cash me-2"></i>
-                                                            $820
+                                                            15,000 Naira 
                                                         </p>
 
                                                         <p class="text-white mb-0">
@@ -267,7 +267,7 @@ Free Bootstrap 5 HTML Template
                                                     <div class="d-flex justify-content-between align-items-center">
                                                         <p class="text-white mb-0">
                                                             <i class="bi-cash me-2"></i>
-                                                            $640
+                                                            12,000 Naira
                                                         </p>
 
                                                         <p class="text-white mb-0">
@@ -329,7 +329,7 @@ Free Bootstrap 5 HTML Template
                                                     <div class="d-flex justify-content-between align-items-center">
                                                         <p class="text-white mb-0">
                                                             <i class="bi-cash me-2"></i>
-                                                            $240
+                                                            8,000 Naira
                                                         </p>
 
                                                         <p class="text-white mb-0">
